fix: add new folder Poller to contain Epoller and update CMakeLists for future new methods of Polling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,24 @@ if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug)
 endif()
 
+if(NOT DEFINED POLL_TYPE)
+    set(POLL_TYPE EPOLL)
+endif()
+
 if(CMAKE_BUILD_TYPE MATCHES Debug)
-    set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
+    set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb -D${POLL_TYPE}")
 elseif(CMAKE_BUILD_TYPE MATCHES Release)
-    set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -Werror -DNDEBUG")
+    set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -Werror -DNDEBUG -D${POLL_TYPE}")
+endif()
+
+if(POLL_TYPE MATCHES EPOLL)
+    file(GLOB POLLER_SRC src/Poller/Epoller.cpp)
+elseif(POLL_TYPE MATCHES POLL)
+    file(GLOB POLLER_SRC src/Poller/Poller.cpp)
+elseif(POLL_TYPE MATCHES SELECT)
+    file(GLOB POLLER_SRC src/Poller/Selecter.cpp)
+else()
+    file(GLOB POLLER_SRC src/Poller/Epoller.cpp)
 endif()
 
 aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
@@ -24,7 +38,7 @@ include_directories(${INCLUDE_LIST})
 
 add_subdirectory(dependencies)
 
-add_executable(${BINARY_NAME} Main.cpp ${SRC_LIST})
+add_executable(${BINARY_NAME} Main.cpp ${SRC_LIST} ${POLLER_SRC})
 
 target_link_libraries(${BINARY_NAME} pthread)
 target_link_libraries(${BINARY_NAME} fmt)
