feat: support poll in EventPoller and update CMakeLists and build.sh to support choose POLL_TYPE using script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,36 +10,36 @@ if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug)
 endif()
 
-if(NOT DEFINED POLL_TYPE)
-    set(POLL_TYPE EPOLL)
+if(NOT POLL_TYPE)
+    set(POLL_TYPE Epoll)
 endif()
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
-    set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb -D${POLL_TYPE}")
+    set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
 elseif(CMAKE_BUILD_TYPE MATCHES Release)
-    set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -Werror -DNDEBUG -D${POLL_TYPE}")
+    set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -Werror -DNDEBUG")
 endif()
 
-if(POLL_TYPE MATCHES EPOLL)
+if(POLL_TYPE MATCHES Epoll)
     file(GLOB POLLER_SRC
-        src/Poller/Pollable.cpp
         src/Poller/Epoller.cpp
         src/Poller/EventPoller.cpp)
-elseif(POLL_TYPE MATCHES POLL)
+    add_compile_definitions(POLL_TYPE=0)
+elseif(POLL_TYPE MATCHES Poll)
     file(GLOB POLLER_SRC
-        src/Poller/Pollable.cpp
         src/Poller/Poller.cpp
         src/Poller/EventPoller.cpp)
-elseif(POLL_TYPE MATCHES SELECT)
+    add_compile_definitions(POLL_TYPE=1)
+elseif(POLL_TYPE MATCHES Select)
     file(GLOB POLLER_SRC
-        src/Poller/Pollable.cpp
         src/Poller/Selecter.cpp
         src/Poller/EventPoller.cpp)
+    add_compile_definitions(POLL_TYPE=2)
 else()
     file(GLOB POLLER_SRC
-        src/Poller/Pollable.cpp
         src/Poller/Epoller.cpp
         src/Poller/EventPoller.cpp)
+    add_compile_definitions(POLL_TYPE=0)
 endif()
 
 aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
