chore: link libiconv when compling under Darwin and support init default poll type(Poll) when compling under Darwin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,3 +54,6 @@ add_executable(${BINARY_NAME} Main.cpp ${SRC_LIST} ${POLLER_SRC})
 
 target_link_libraries(${BINARY_NAME} pthread)
 target_link_libraries(${BINARY_NAME} fmt)
+if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
+    target_link_libraries(${BINARY_NAME} iconv)
+endif()
