--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,3 +57,5 @@ target_link_libraries(${BINARY_NAME} fmt)
 if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
     target_link_libraries(${BINARY_NAME} iconv)
 endif()
+target_link_libraries(${BINARY_NAME} ssl)
+target_link_libraries(${BINARY_NAME} crypto)
