refactor: create Connector directory and move Connector related files into the directory and update CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ endif()
 
 aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/Socket SOCKET_SRC_LIST)
+aux_source_directory(${PROJECT_SOURCE_DIR}/src/Connector CONNECTOR_SRC_LIST)
 
 set(INCLUDE_LIST ${PROJECT_SOURCE_DIR}/include)
 
@@ -54,8 +55,9 @@ add_subdirectory(dependencies)
 add_executable(${BINARY_NAME}
     Main.cpp
     ${SRC_LIST}
+    ${POLLER_SRC}
     ${SOCKET_SRC_LIST}
-    ${POLLER_SRC})
+    ${CONNECTOR_SRC_LIST})
 
 target_link_libraries(${BINARY_NAME} pthread)
 target_link_libraries(${BINARY_NAME} fmt)
