feat: add Utils directory and move FormatConvertor, IPAddress, Logger, NonCopyable, Signal and SslWrapper into Utils directory

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(${BINARY_NAME}
     ${SOCKET_SRC_LIST}
     ${CONNECTOR_SRC_LIST}
     ${CLIENT_SRC_LIST}
+    ${UTILS_SRC_LIST}
     ConnectorTest.cpp
     SinaStockParserTest.cpp
     IPAddressTest.cpp)
