chore: move Dns related cpp files and hpp files into Dns directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ aux_source_directory(${PROJECT_SOURCE_DIR}/src/Socket SOCKET_SRC_LIST)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/Connector CONNECTOR_SRC_LIST)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/Client CLIENT_SRC_LIST)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/Utils UTILS_SRC_LIST)
+aux_source_directory(${PROJECT_SOURCE_DIR}/src/Dns DNS_SRC_LIST)
 
 set(INCLUDE_LIST ${PROJECT_SOURCE_DIR}/include)
 
@@ -61,7 +62,8 @@ add_executable(${BINARY_NAME}
     ${SOCKET_SRC_LIST}
     ${CONNECTOR_SRC_LIST}
     ${CLIENT_SRC_LIST}
-    ${UTILS_SRC_LIST})
+    ${UTILS_SRC_LIST}
+    ${DNS_SRC_LIST})
 
 target_link_libraries(${BINARY_NAME} pthread)
 target_link_libraries(${BINARY_NAME} fmt)
