chore: update the CMakeLists of test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,25 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
 
-set(BINARY_NAME StockCrawlerTest)
-project(${BINARY_NAME})
-
+set(TEST_BINARY_NAME "${PROJECT_NAME}Test")
 enable_testing()
 
-include_directories(${INCLUDE_LIST})
-add_executable(${BINARY_NAME}
-    ${SOURCE_LIST}
-    ConnectorTest.cpp
-    SinaStockParserTest.cpp
-    IPAddressTest.cpp
-    DnsResolverTest.cpp)
-
-target_link_libraries(${BINARY_NAME} pthread)
-target_link_libraries(${BINARY_NAME} fmt)
-target_link_libraries(${BINARY_NAME} gtest gtest_main)
-if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
-    target_link_libraries(${BINARY_NAME} iconv)
-endif()
-target_link_libraries(${BINARY_NAME} ssl)
-target_link_libraries(${BINARY_NAME} crypto)
-
-add_test(StockCrawlerTests ${BINARY_NAME})
+aux_source_directory(${PROJECT_SOURCE_DIR}/test TEST_SRC_LIST)
+add_executable(${TEST_BINARY_NAME} ${TEST_SRC_LIST})
+target_link_libraries(${TEST_BINARY_NAME} NetworkToolLib)
+target_link_libraries(${TEST_BINARY_NAME} gtest gtest_main)
