feat: add HttpCurl example and change MAX_READ_BUFFER to 65535

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.5)
 add_subdirectory(PingPong)
 add_subdirectory(StockCrawl)
 add_subdirectory(EventFd)
+add_subdirectory(HttpCurl)
