feat: support HttpsClient
Add example of HttpsCurl and the test of HttpRespParser

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(PingPong)
 add_subdirectory(StockCrawl)
 add_subdirectory(EventFd)
 add_subdirectory(HttpCurl)
+add_subdirectory(HttpsCurl)
