feat: add DnsResolver example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(StockCrawl)
 add_subdirectory(HttpCurl)
 add_subdirectory(HttpsCurl)
 add_subdirectory(DnsOverHttps)
+add_subdirectory(DnsResolver)
